# strawberry-ai-client

./: .env.example  .gitignore  README.md  SKILLS_SUMMARY.md  demo_improved_search.py  demo_new_skills.py  example_websocket.py  pyproject.toml  ruff.toml
config/: config.yaml  settings.yaml  tensorzero.toml
config/themes/: _template.yaml  dark.yaml  light.yaml
config/tools/: describe_function.json  python_exec.json  search_skills.json
docs/REVIEWS/: ACTIONABLE-REVIEW.md  PEER-REVIEW.md
examples/: music_control_example.py
scripts/: debug_tool_calls.py  voice_debug.py
skills/: example_skill.py  internet_skill.py  media_control_skill.py  music_control_skill.py  news_skill.py  system_control_skill.py  weather_skill.py
skills/_legacy/: example_skill.py  internet_skill.py  media_control_skill.py  news_skill.py  system_control_skill.py  weather_skill.py
skills/calculator_skill/: skill.py
skills/mcp_skill/: class_builder.py  mcp_client.py  skill.py
skills/media_control_skill/: media_dispatch.py  skill.py
skills/music_control_skill/: MUSIC_CONTROL_IMPLEMENTATION.md  skill.py
skills/time_skill/: skill.py
skills/weather_skill/: skill.py
src/config/: config.yaml
src/strawberry/: __init__.py  main.py  models.py  terminal.py
src/strawberry/audio/: __init__.py  base.py  feedback.py  playback.py  stream.py
src/strawberry/audio/backends/: __init__.py  mock.py  sounddevice_backend.py
src/strawberry/config/: __init__.py  env_file.py  loader.py  persistence.py  settings.py  yaml_file.py
src/strawberry/core/: __init__.py  app.py  events.py  settings_schema.py
src/strawberry/hub/: __init__.py  client.py
src/strawberry/llm/: __init__.py  offline_tracker.py  tensorzero_client.py  tensorzero_config.py  tensorzero_settings.py
src/strawberry/mcp/: README.md  __init__.py  adapter.py  client.py  config.py  mcp-design.md  mcp_typescript_wrapper.md  registry.py  settings.py  settings_schema.py
src/strawberry/pipeline/: __init__.py  conversation.py  events.py
src/strawberry/shared/: __init__.py
src/strawberry/shared/settings/: SettingsManager.md  __init__.py  editor.py  manager.py  schema.py  storage.py  view_model.py
src/strawberry/skills/: __init__.py  loader.py  prompt.py  proxies.py  registry.py  remote.py  restricted_executor.py  service.py  tool_dispatch.py
src/strawberry/skills/sandbox/: __init__.py  bridge.py  executor.py  gatekeeper.py  host.ts  process.py  proxy_gen.py
src/strawberry/skills/store/: __init__.py  catalog.py  cli.py  installer.py  models.py  skill_catalog.yaml
src/strawberry/spoke_core/: __init__.py  agent_runner.py  app.py  event_bus.py  events.py  hub_connection_manager.py  session.py  settings_schema.py  skill_manager.py  spokecore.md
src/strawberry/storage/: __init__.py  session_db.py  sync_manager.py
src/strawberry/stt/: __init__.py  base.py  discovery.py
src/strawberry/stt/backends/: __init__.py  leopard.py  mock.py
src/strawberry/testing/: __init__.py  runner.py  skill_tester.py  skill_tester_agent.py  skill_tester_main.py
src/strawberry/tts/: __init__.py  base.py  discovery.py
src/strawberry/tts/backends/: __init__.py  mock.py  orca.py
src/strawberry/ui/: __init__.py  agent_helpers.py  app.py  hub_manager.py  main_window.py  markdown_renderer.py  qt_voice_adapter.py  session_controller.py  settings_dialog.py  theme.py  voice_controller.py
src/strawberry/ui/cli/: CLI.md  README.md  __init__.py  __main__.py  adapter.py  cli_ui_v2.md  controls.py  events.py  interactive.py  main.py  models.py  renderer.py  runner.py  settings_cli.py  settings_menu.py
src/strawberry/ui/common/: __init__.py  widgets.py
src/strawberry/ui/gui_v2/: __init__.py  __main__.py  app.py  gui v2 plan.md  gui_v2_summary.md  main_window.py  settings_schema.py
src/strawberry/ui/qt/: __init__.py  agent_helpers.py  app.py  hub_manager.py  main_window.py  qt_voice_adapter.py  session_controller.py  settings_dialog.py
src/strawberry/ui/test_cli/: README.md  TEST_CLI_DESIGN.md  __init__.py  __main__.py  output.py  runner.py  settings_cli.py  settings_menu.py
src/strawberry/ui/voice_interface/: __init__.py  __main__.py  voice_interface.py
src/strawberry/ui/widgets/: __init__.py  assistant_turn_widget.py  (+11 more)
src/strawberry/utils/: async_bridge.py  paths.py
src/strawberry/vad/: __init__.py  base.py  discovery.py  processor.py
src/strawberry/voice/: About-Voice-Core.md  __init__.py  component_manager.py  config.py  controller.py  events.py  listener_fsm.py  pipeline_manager.py  settings_integration.py  settings_schema.py  speaker_fsm.py  state.py  voice_core.py
src/strawberry/wake/: __init__.py  base.py  discovery.py
tests/: __init__.py  conftest.py  test_agent_helpers.py  test_audio.py  test_audio_feedback.py  test_cli_live.py  test_config.py  test_core_settings.py  test_disabled_skills.py  test_env_storage.py  test_hub_client.py  test_hub_connection_manager.py  test_interactive_cli.py  test_live_chat.py  test_mcp.py  test_mcp_skill.py  test_mode_switch.py  test_music_control.py  test_new_skills.py  test_offline_mode.py  test_pipeline.py  test_prompt.py  test_protocol.py  test_remote.py  test_sandbox.py  test_schema_settings_widget.py  test_settings_enhanced.py  test_settings_manager.py  test_settings_schema.py  test_skill_modes.py  test_skill_repo_loading.py  test_skill_settings.py  test_skill_store.py  test_skill_tester.py  test_skill_tester_agent.py  test_skills.py  test_stt.py  test_stt_discovery.py  test_stt_fallback.py  test_tensorzero_config.py  (+16 more)
(+115 files in other folders)
