[project]
name = "strawberry-spoke"
version = "0.1.0"
description = "Voice assistant spoke for Strawberry AI"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    # Core
    "pydantic>=2.0",
    "RestrictedPython>=8.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "tenacity>=8.0",  # Retry logic
    "websockets>=12.0",  # WebSocket client for Hub connection
    "tensorzero>=0.1.0",  # LLM routing via embedded gateway
    
    # Audio
    "sounddevice>=0.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Voice processing (install separately due to size/licensing)
picovoice = [
    "pvporcupine>=3.0",
    "pvorca>=1.0",
    "pvcobra>=2.0",
    "pvleopard>=2.0",
]
google = [
    "google-cloud-speech>=2.0",
    "google-cloud-texttospeech>=2.0",
]
silero = [
    "torch>=2.0",
    "torchaudio>=2.0",
]
ui = [
    "PySide6>=6.5",
    "qasync>=0.24",
    "markdown>=3.4",
    "pygments>=2.15",  # For code syntax highlighting
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
all = [
    "strawberry-spoke[picovoice,google,silero,ui,dev]",
]

[project.scripts]
strawberry = "strawberry.main:main"
strawberry-cli = "strawberry.ui.cli.main:main"
strawberry-gui = "strawberry.ui.app:main"
strawberry-test = "strawberry.testing.runner:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "src/strawberry/ui/cli/tests"]

